[metadata]
name = explainable-rl
version = 0.0.2
author = Giulia Sassatelli, Ludovico Buizza, Teresa Delgado de las Heras, Mireia Hernandez Caralt, Matteo Gabriel Mecattaf
author_email = lcb216@ic.ac.uk
description = A package for explainable tabular reinforcement learning.
long_description = file: PYPIREADME.md
long_description_content_type = text/markdown
url = https://github.com/gsassatelli/explainable-rl
Bug Tracker = https://github.com/gsassatelli/explainable-rl/issues
License :: MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent



[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    ipdb>=0.13.11
    matplotlib>=3.7.1
    numpy>=1.23.5
    pandas>=1.5.3
    scikit_learn>=1.2.2
    seaborn>=0.11.1
    sparse>=0.13.0
    tqdm>=4.65.0
    pyarrow>=11.0.0

[options.packages.find]
exclude =
    tests/
    docs/
    class_diagrams/
    .github/
    .gitignore
    .LICENSE
    onboarding_nb.ipynb
    README.md
    requirements.txt
    setup.cfg
    .readthedocs.yaml



